--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,35 @@
 ---
-title: "Trent Bellinger's Personal Website"
+title: "Trent Bellinger"
+about:
+  template: trestles
+  image: profile.jpg
+  links:
+    - icon: linkedin
+      text: LinkedIn
+      url: "https://www.linkedin.com/in/trent-bellinger-84041a22b/"
+    - icon: github
+      text: GitHub
+      url: "https://github.com/trentbellinger"
+    - icon: inbox-fill
+      text: Email
+      url: "mailto:trentbellinger@g.ucla.edu"
+toc: false
 ---
 
-This is a Quarto website.
+Finley Malloc is the Chief Data Scientist at Wengo Analytics. When not innovating on data platforms, Finley enjoys spending time unicycling and playing with her pet iguana.
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+Download [Resume](resume.pdf)
 
-```{r}
-1 + 3
-```
+## Education
+
+University of California, San Diego | San Diego, CA
+PhD in Mathematics | Sept 2011 - June 2015
+
+Macalester College | St. Paul MA
+B.A in Economics | Sept 2007 - June 2011
+
+## Experience
+
+Wengo Analytics | Head Data Scientist | April 2018 - present
+
+GeoScynce | Chief Analyst | Spet 2012 - April 2018
