--- a/index.qmd
+++ b/index.qmd
@@ -4,7 +4,8 @@ about:
   template: trestles
   image: profile.jpg
   links:
-    - text: Resume
+    - icon: file-text
+      text: Resume
       url: "resume.pdf"
     - icon: linkedin
       text: LinkedIn
@@ -15,23 +16,26 @@ about:
     - icon: inbox-fill
       text: Email
       url: "mailto:trentbellinger@g.ucla.edu"
+format:
+  html:
+    css: styles.css
 toc: false
 ---
 
-Finley Malloc is the Chief Data Scientist at Wengo Analytics. When not innovating on data platforms, Finley enjoys spending time unicycling and playing with her pet iguana.
-
-Download [Resume](resume.pdf)
+I am a current student at UCLA with a passion for data science and sports.
 
 ## Education
 
-University of California, San Diego | San Diego, CA
-PhD in Mathematics | Sept 2011 - June 2015
+University of California, Los Angeles
 
-Macalester College | St. Paul MA
-B.A in Economics | Sept 2007 - June 2011
+B.S. Statistics and Data Science, Applied Mathematics with Specialization in Computing
+
+Sept 2021 - June 2025
 
 ## Experience
 
-Wengo Analytics | Head Data Scientist | April 2018 - present
+Southern California Edison | Data Science Intern | June 2024 - present
 
-GeoScynce | Chief Analyst | Spet 2012 - April 2018
+UCLA Baseball | Data Consulting Team Lead | June 2024 - present
+
+UCLA Football | Data Consulting Team Lead  | June 2024 - present
